# SPDX-FileCopyrightText: 2023 Tom Haynes <loghyr@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-or-later

# Order is important!
# xdr at the front and tests at the end
SUBDIRS =		\
	include		\
	xdr		\
	trace		\
	utils		\
	backends	\
	fs		\
	nlm		\
	nsm		\
	mount3		\
	nfs3		\
	nfs4		\
	rpc		\
	io		\
	probe1		\
	tests
