# SPDX-FileCopyrightText: 2023 Tom Haynes <loghyr@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-or-later

# Order is important!
# xdr at the front and tests at the end
SUBDIRS =		\
	xdr		\
	include		\
	trace		\
	backends	\
	utils		\
	io		\
	rpc		\
	tests		\
	fs		\
	nlm		\
	nsm		\
	mount3		\
	nfs3		\
	nfs4		\
	probe1
