# SPDX-FileCopyrightText: 2023 Tom Haynes <loghyr@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-or-later

SUBDIRS = reffs

dist_bin_SCRIPTS = \
	gen_nfsv42_names.py \
	reffs-probe.py \
	bat_setup.sh \
	bat_client_setup.sh \
	bat_export_setup.sh \
	bat_krb5_setup.sh \
	bat_tls_setup.sh \
	ci_remote.sh \
	dstate_monitor.sh
